Fix styling issues
Fixes the <p> margin issue in the 4th child of the home hage.

Fixes custom scrollbar styling issue with vertical scrollbars

Adds enable/disable scroll section animation feature

--- a/themes/basakbeykoz/react-src/src/common/styles/_scrollbar.scss
+++ b/themes/basakbeykoz/react-src/src/common/styles/_scrollbar.scss
@@ -1,5 +1,5 @@
-@import "_vars";
-@import "_mixins";
+@import '_vars';
+@import '_mixins';
 
 $PASSIVE_GAP: $gap/4;
 $ACTIVE_GAP: $gap/1.5;
@@ -7,26 +7,50 @@ $ACTIVE_GAP: $gap/1.5;
 .os-scrollbar {
   z-index: 150;
   padding: 0 !important;
-  width: #{$ACTIVE_GAP} !important;
-
-  &:active,
-  &:hover {
+  &-vertical {
     width: #{$ACTIVE_GAP} !important;
-    & .os-scrollbar-handle {
-      @include narrowScreen() {
-        width: #{$ACTIVE_GAP};
-        border-top-left-radius: #{$ACTIVE_GAP} !important;
-        border-bottom-left-radius: #{$ACTIVE_GAP} !important;
+    &:active,
+    &:hover {
+      width: #{$ACTIVE_GAP} !important;
+      & .os-scrollbar-handle {
+        @include narrowScreen() {
+          width: #{$ACTIVE_GAP};
+          border-top-left-radius: #{$ACTIVE_GAP} !important;
+          border-bottom-left-radius: #{$ACTIVE_GAP} !important;
+        }
       }
     }
-  }
 
-  & .os-scrollbar-handle {
-    width: #{$PASSIVE_GAP};
-    right: 0;
-    background-color: #{map-get($colorMap, ui-gray)} !important;
-    border-radius: 0 !important;
-    border-top-left-radius: #{$PASSIVE_GAP} !important;
-    border-bottom-left-radius: #{$PASSIVE_GAP} !important;
+    & .os-scrollbar-handle {
+      width: #{$PASSIVE_GAP};
+      right: 0;
+      background-color: #{map-get($colorMap, ui-gray)} !important;
+      border-radius: 0 !important;
+      border-top-left-radius: #{$PASSIVE_GAP} !important;
+      border-bottom-left-radius: #{$PASSIVE_GAP} !important;
+    }
+  }
+  &-horizontal {
+    height: #{$ACTIVE_GAP} !important;
+    &:active,
+    &:hover {
+      height: #{$ACTIVE_GAP} !important;
+      & .os-scrollbar-handle {
+        @include narrowScreen() {
+          height: #{$ACTIVE_GAP};
+          border-top-left-radius: #{$ACTIVE_GAP} !important;
+          border-top-right-radius: #{$ACTIVE_GAP} !important;
+        }
+      }
+    }
+
+    & .os-scrollbar-handle {
+      height: #{$PASSIVE_GAP};
+      bottom: 0;
+      background-color: #{map-get($colorMap, ui-gray)} !important;
+      border-radius: 0 !important;
+      border-top-left-radius: #{$PASSIVE_GAP} !important;
+      border-top-right-radius: #{$PASSIVE_GAP} !important;
+    }
   }
 }
